--- a/css/styles.css
+++ b/css/styles.css
@@ -6,25 +6,23 @@ Primary Color (Purple): #357b70;
 Secondary Color (Orange): #e0b354;
  */
 
-
- :root {
-   --primary-color: #69968e;
-   --secondary-color: #e0b354;
-   --dark-grey: #272727;
-   --meme: #002d27
- }
+:root {
+  --primary-color: #69968e;
+  --secondary-color: #e0b354;
+  --dark-grey: #272727;
+  --meme: #002d27;
+}
 
 * {
   box-sizing: border-box;
 }
 
-
 body {
-  font-family:'Slabo', sans-serif;
+  font-family: 'Slabo', sans-serif;
   color: var(--dark-grey);
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.6
+  line-height: 1.6;
 }
 
 h1 {
@@ -50,7 +48,8 @@ a:visited {
   color: var(--secondary-color);
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
 }
@@ -59,25 +58,33 @@ a:active {
   color: #489c79;
 }
 
-button, .button {
+button,
+.button {
   /* overwrites browser defaults and resets the border */
   border: none;
   display: inline-block;
+
   /* takes the font from the outer container */
   font-family: inherit;
+
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
   background-color: var(--primary-color);
   color: white;
   text-decoration: none;
-  /*adds spacing to the button (this will be discussed more in-depth later) */
+
+  /* adds spacing to the button (this will be discussed more in-depth later) */
   padding: 10px;
   border-radius: 3px;
+
   /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: 0.2s opacity;
 }
 
-button:hover, button:focus, .button:hover, .button:focus {
+button:hover,
+button:focus,
+.button:hover,
+.button:focus {
   cursor: pointer;
   opacity: 0.8;
 }
@@ -87,7 +94,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   width: 250px;
   height: auto;
   margin-right: 40px;
-  border-radius: 50%
+  border-radius: 50%;
 }
 
 .svg {
@@ -137,37 +144,39 @@ button:hover, button:focus, .button:hover, .button:focus {
 
 /* start grid fallback */
 .grid__item {
- display: inline-block;
- width: 33%;
+  display: inline-block;
+  width: 33%;
 }
+
 /* end grid fallback */
 
 @supports (display: grid) {
- .grid {
-   display: grid;
-   /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
-   grid-template-columns: 1fr 1fr 1fr;
-   grid-gap: 20px;
-   margin: 0;
- }
+  .grid {
+    display: grid;
 
- .grid__item {
-   background-color: #2b2b2b;
-   width: auto;
-   min-height: auto;
-   margin: 0;
-}
+    /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin: 0;
+  }
 
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;
-}
+  .grid__item {
+    background-color: #2b2b2b;
+    width: auto;
+    min-height: auto;
+    margin: 0;
+  }
 
-.grid__item {
-  background-color: var(--primary-color);
-  padding: 10px;
-}
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+  }
+
+  .grid__item {
+    background-color: var(--primary-color);
+    padding: 10px;
+  }
 }
 
 @media all and (max-width: 500px) {
@@ -184,14 +193,16 @@ button:hover, button:focus, .button:hover, .button:focus {
 
 @media all and (max-width: 750px) {
   .grid {
-    grid-gap: 10px
+    grid-gap: 10px;
   }
+
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
-    font-size: 22px
+    font-size: 22px;
   }
 }
 
@@ -214,9 +225,11 @@ button:hover, button:focus, .button:hover, .button:focus {
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
@@ -234,6 +247,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   from {
     transform: translate(0, 50px);
   }
+
   to {
     transform: translate(200px, 50px);
   }
@@ -251,6 +265,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   from {
     transform: translate(446px, 48px);
   }
+
   to {
     transform: translate(100px, 48px);
   }
