--- a/css/style.production.css
+++ b/css/style.production.css
@@ -261,13 +261,20 @@ button:focus,
 
 .aboutme {
   text-align: center;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .experience {
   margin-left: auto;
   margin-right: auto;
+}
+
+.contact-profile {
+  max-width: 700px;
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
 }
 
 /*
